@@ -1,3 +1,9 @@
+2002-12-31  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: add docs on pbuildd.
+
+	* pbuildd/Makefile (install): add /var/cache/pbuilder/pbuildd dir
+
 2002-12-30  Junichi Uekawa  <dancer@debian.org>
 
 	* Makefile: install pbuildd files as well.
